--- a/assets/languages/tr_TR.json
+++ b/assets/languages/tr_TR.json
@@ -11,5 +11,6 @@
     "turkish": "Türkçe",
     "get_contacts": "Kişiler",
     "share_text": "Text Paylaş",
-    "share_files": "Dosya Paylaş"
+    "share_files": "Dosya Paylaş",
+    "back_up": "Yedekle"
   }
