Added some features.

--- a/assets/languages/en_US.json
+++ b/assets/languages/en_US.json
@@ -12,5 +12,6 @@
     "get_contacts": "Get contacts",
     "share_text": "Share text",
     "share_files": "Share files",
-    "back_up": "Backup"
+    "back_up": "Backup",
+    "update_contact": "Update Contact"
   }
