--- a/assets/languages/tr_TR.json
+++ b/assets/languages/tr_TR.json
@@ -12,5 +12,6 @@
     "get_contacts": "Kişiler",
     "share_text": "Text Paylaş",
     "share_files": "Dosya Paylaş",
-    "back_up": "Yedekle"
+    "back_up": "Yedekle",
+    "update_contact": "Kişiyi Güncelle"
   }
