--- a/assets/languages/tr_TR.json
+++ b/assets/languages/tr_TR.json
@@ -13,5 +13,7 @@
     "share_text": "Text Paylaş",
     "share_files": "Dosya Paylaş",
     "back_up": "Yedekle",
-    "update_contact": "Kişiyi Güncelle"
+    "update_contact": "Kişiyi Güncelle",
+    "total_contact": "Toplam kişi sayınız:",
+    "get_contact_list": "Kişi Listesi"
   }
