--- a/assets/languages/tr_TR.json
+++ b/assets/languages/tr_TR.json
@@ -15,5 +15,6 @@
     "back_up": "Yedekle",
     "update_contact": "Kişiyi Güncelle",
     "total_contact": "Toplam kişi sayınız:",
-    "get_contact_list": "Kişi Listesi"
+    "get_contact_list": "Kişi Listesi",
+    "past_contact_list": "Geçmiş kişiler yedekleri"
   }
